Se creó con Colab

--- a/Ejercicio_3.ipynb
+++ b/Ejercicio_3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyON6zZcE078jFkh50edDHp7",
+      "authorship_tag": "ABX9TyO8kbw7dtt8s0RZk8dGlYFl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,18 +42,16 @@
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
-        "     \n",
         "\n",
+        "from google.colab import userdata\n",
         "import json\n",
-        "from google.colab import drive\n",
         "\n",
         "!mkdir ~/.kaggle\n",
         "!touch ~/.kaggle/kaggle.json\n",
         "\n",
-        "drive.mount('/content/drive', force_remount=True)\n",
-        "with open(\"/content/drive/My Drive/kaggle.json\", 'r') as f:\n",
-        "    api_token= json.load(f)\n",
-        "\n",
+        "api_token = {\n",
+        "    'username': userdata.get('KAGGLE_USER'),\n",
+        "    'key': userdata.get('KAGGLE_KEY')}\n",
         "with open('/root/.kaggle/kaggle.json', 'w') as file:\n",
         "    json.dump(api_token, file)\n",
         "\n",
@@ -66,19 +64,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YaLV8LZuF3sf",
-        "outputId": "6c411bad-ff98-416d-afda-4dab254020fb"
+        "outputId": "2e9b7031-a782-44c0-d329-69e52d0d542a"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "mkdir: cannot create directory ‘/root/.kaggle’: File exists\n",
-            "Mounted at /content/drive\n",
+            "Dataset URL: https://www.kaggle.com/datasets/shubhambathwal/flight-price-prediction\n",
+            "License(s): CC0-1.0\n",
             "Downloading flight-price-prediction.zip to /content\n",
-            " 96% 4.00M/4.16M [00:00<00:00, 5.81MB/s]\n",
-            "100% 4.16M/4.16M [00:01<00:00, 4.36MB/s]\n"
+            " 96% 4.00M/4.16M [00:00<00:00, 6.05MB/s]\n",
+            "100% 4.16M/4.16M [00:00<00:00, 4.55MB/s]\n"
           ]
         }
       ]
@@ -86,7 +84,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Extraigo todos los archivos que están en el .zip que acabamos de \"bajar\". \n",
+        "# Extraigo todos los archivos que están en el .zip que acabamos de \"bajar\".\n",
         "\n",
         "import zipfile\n",
         "import os\n",
@@ -129,11 +127,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Pregunta 1: ¿Qué R2 se obtiene si se calcula una regresión lineal entre la duración del vuelo y su precio? \n",
+        "Pregunta 1: ¿Qué R2 se obtiene si se calcula una regresión lineal entre la duración del vuelo y su precio?\n",
         "\n",
-        "Ayuda: \n",
+        "Ayuda:\n",
         "\n",
-        "Con statsmodels puede calcularse así: \n",
+        "Con statsmodels puede calcularse así:\n",
         "```\n",
         "import statsmodels.api as sm\n",
         "mod = sm.OLS(df['price'], df['duration'])\n",
@@ -141,7 +139,7 @@
         "print(res.summary())\n",
         "```\n",
         "\n",
-        "Con sklearn puede calcularse así: \n",
+        "Con sklearn puede calcularse así:\n",
         "```\n",
         "from sklearn.linear_model import LinearRegression\n",
         "X=['duration']\n",
@@ -167,20 +165,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Pregunta 2: realice un split de entrenamiento y testeo con el siguiente código: \n",
+        "Pregunta 2: realice un split de entrenamiento y testeo con el siguiente código:\n",
         "\n",
         "```\n",
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(df[X],y, test_size=0.2, random_state=1)\n",
         "```\n",
         "\n",
-        "Calcule la regresión utilizando solamente los datos de entrenamiento: \n",
+        "Calcule la regresión utilizando solamente los datos de entrenamiento:\n",
         "\n",
         "```\n",
         "reg = LinearRegression().fit(X_train,y_train)\n",
         "```\n",
         "\n",
-        "¿Por qué difieren los R2 obtenidos para entrenamiento y para testeo? \n",
+        "¿Por qué difieren los R2 obtenidos para entrenamiento y para testeo?\n",
         "\n",
         "\n",
         "```\n",
@@ -207,7 +205,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Pregunta 3: ¿Si agregamos más avariables predictivas, qué va a pasar con el R2? Muéstrelo. "
+        "Pregunta 3: ¿Si agregamos más avariables predictivas, qué va a pasar con el R2? Muéstrelo."
       ],
       "metadata": {
         "id": "SxBIUh8b2DWk"
@@ -225,17 +223,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Pregunta 4: Algunas variables son categóricas y por tanto no se pueden incluir como predictoras. ¿Qué se podría hacer para incluirlas? \n",
+        "Pregunta 4: Algunas variables son categóricas y por tanto no se pueden incluir como predictoras. ¿Qué se podría hacer para incluirlas?\n",
         "\n",
-        "Ayuda: \n",
-        "Una idea podría ser convertir esas categorías en valores númericos. Pero piense que aveces las categorias respetan cierta \"distancia\", mientras que otras veces no. Esto puede hacerse con pandas así: \n",
+        "Ayuda:\n",
+        "Una idea podría ser convertir esas categorías en valores númericos. Pero piense que aveces las categorias respetan cierta \"distancia\", mientras que otras veces no. Esto puede hacerse con pandas así:\n",
         "\n",
         "\n",
         "```\n",
         "df['departure_time_cat']=df['departure_time'].astype('category').cat.codes\n",
         "```\n",
         "\n",
-        "Otra idea sería generar variables dummys para cada una de las categorías. ¿Qué ventajas y desventajas tiene esto? \n",
+        "Otra idea sería generar variables dummys para cada una de las categorías. ¿Qué ventajas y desventajas tiene esto?\n",
         "\n",
         "\n",
         "\n",
@@ -261,7 +259,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Pregunta 5: "
+        "Pregunta 5:"
       ],
       "metadata": {
         "id": "eFoG4skkL0OS"
@@ -286,7 +284,7 @@
         "print(reg.score(X_test,y_test))\n",
         "```\n",
         "\n",
-        "Calculamos el R2 de testeo de una regresión con las variables que generamos. Luego, agregamos una variable más con un código que responde a la ciudad de origen. Pero al hacer esto último, el R2 no mejora. ¿Por qué? \n"
+        "Calculamos el R2 de testeo de una regresión con las variables que generamos. Luego, agregamos una variable más con un código que responde a la ciudad de origen. Pero al hacer esto último, el R2 no mejora. ¿Por qué?\n"
       ],
       "metadata": {
         "id": "HmiQ7UXDPKvt"
