--- a/Ejercicio_4.ipynb
+++ b/Ejercicio_4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMl9GFu3x9eBl3D5sO9lm1c",
+      "authorship_tag": "ABX9TyPbTWCaM/kRnDGKiqg0WXy+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
         "# Ejercicio 4\n",
         "\n",
         "\n",
-        "Se utiliza un modelo de Churn de usuarios de tarjetas de crédito: \n",
+        "Se utiliza un modelo de Churn de usuarios de tarjetas de crédito:\n",
         "https://www.kaggle.com/code/mzmdgaming/credit-card-customer-churn-model"
       ],
       "metadata": {
@@ -53,18 +53,16 @@
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
-        "     \n",
         "\n",
+        "from google.colab import userdata\n",
         "import json\n",
-        "from google.colab import drive\n",
         "\n",
         "!mkdir ~/.kaggle\n",
         "!touch ~/.kaggle/kaggle.json\n",
         "\n",
-        "drive.mount('/content/drive', force_remount=True)\n",
-        "with open(\"/content/drive/My Drive/kaggle.json\", 'r') as f:\n",
-        "    api_token= json.load(f)\n",
-        "\n",
+        "api_token = {\n",
+        "    'username': userdata.get('KAGGLE_USER'),\n",
+        "    'key': userdata.get('KAGGLE_KEY')}\n",
         "with open('/root/.kaggle/kaggle.json', 'w') as file:\n",
         "    json.dump(api_token, file)\n",
         "\n",
@@ -77,7 +75,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hvJWAhHBhb_O",
-        "outputId": "6c7d46f2-7177-447c-f91a-de5043037502"
+        "outputId": "dd3e3abb-9fe5-46a4-cdef-471970527361"
       },
       "execution_count": 1,
       "outputs": [
@@ -85,10 +83,11 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n",
+            "Dataset URL: https://www.kaggle.com/datasets/thedevastator/predicting-credit-card-customer-attrition-with-m\n",
+            "License(s): CC0-1.0\n",
             "Downloading predicting-credit-card-customer-attrition-with-m.zip to /content\n",
             "  0% 0.00/379k [00:00<?, ?B/s]\n",
-            "100% 379k/379k [00:00<00:00, 112MB/s]\n"
+            "100% 379k/379k [00:00<00:00, 74.3MB/s]\n"
           ]
         }
       ]
@@ -96,7 +95,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Extraigo todos los archivos que están en el .zip que acabamos de \"bajar\". \n",
+        "# Extraigo todos los archivos que están en el .zip que acabamos de \"bajar\".\n",
         "\n",
         "import zipfile\n",
         "import os\n",
@@ -112,7 +111,7 @@
       "metadata": {
         "id": "n4TgflhJmGSk"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -123,7 +122,7 @@
       "metadata": {
         "id": "pVQU4sycmJT9"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -138,7 +137,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Pregunta 1: ¿Cuántos de los usuarios son attrited? \n",
+        "Pregunta 1: ¿Cuántos de los usuarios son attrited?\n",
         "\n",
         "Ayuda: La variable que identifica a estos usuarios es 'Attrition_Flag'\n",
         "\n",
@@ -154,13 +153,13 @@
       "metadata": {
         "id": "N46W8M-5mWTK"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Pregunta 2: \n",
+        "Pregunta 2:\n",
         "\n",
         "El siguiente código genera una variable dummy con valor 0 para los usuarios que permanecen y valor 1 para los que se fueron.\n",
         "\n",
@@ -184,7 +183,7 @@
         "Y=df['attrited']\n",
         "```\n",
         "\n",
-        "Con esto ya podríamos correr un sencillo modelo LASSO: \n",
+        "Con esto ya podríamos correr un sencillo modelo LASSO:\n",
         "\n",
         "\n",
         "\n",
@@ -197,9 +196,9 @@
         "lr.fit(X_train,y_train)\n",
         "```\n",
         "\n",
-        "¿Cuál es el score de train y cuál el de test? \n",
+        "¿Cuál es el score de train y cuál el de test?\n",
         "\n",
-        "Ayuda: \n",
+        "Ayuda:\n",
         "\n",
         "```\n",
         "print(lr.score(X_train,y_train))\n",
@@ -217,35 +216,19 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(lr.score(X_train,y_train))\n",
-        "print(lr.score(X_test,y_test))"
-      ],
+      "source": [],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "gdZsy5LcwXlN",
-        "outputId": "6f24fa26-eb80-4400-97cb-132f06e84915"
+        "id": "nhSBov5tiQiG"
       },
-      "execution_count": 31,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0.8735958523639057\n",
-            "0.87857847976308\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Pregunta 3: Utilice ahora un modelo tipo elastic-net. ¿Mejora la predicción? \n",
+        "Pregunta 3: Utilice ahora un modelo tipo elastic-net. ¿Mejora la predicción?\n",
         "\n",
-        "Ayuda: \n",
+        "Ayuda:\n",
         "\n",
         "penalty='elasticnet' y tendrá que cambiar el solver y agregar el l1_ratio"
       ],
@@ -259,7 +242,7 @@
       "metadata": {
         "id": "seApVFXhxTdp"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -267,7 +250,7 @@
       "source": [
         "Pregunta 4: ¿Cómo es la matriz de confusión? ¿Qué significa?\n",
         "\n",
-        "Ayuda: \n",
+        "Ayuda:\n",
         "\n",
         "\n",
         "\n",
@@ -293,13 +276,13 @@
       "metadata": {
         "id": "gCbxtqBNyspx"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Pregunta 5: ¿Cómo se puede hacer para obtener una predicción mejor que la obtenida? "
+        "Pregunta 5: ¿Cómo se puede hacer para obtener una predicción mejor que la obtenida?"
       ],
       "metadata": {
         "id": "NadxqNC70Ncx"
