Se creó con Colab

--- a/Ejercicio_5.ipynb
+++ b/Ejercicio_5.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Ejercicio1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMsoXYmxhI1DGG/RXwzNdDS",
+      "authorship_tag": "ABX9TyNUaU6H+CNeUSrY1yT0CQ+g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,15 +49,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "1PEKVTO-WdWl"
       },
       "outputs": [],
       "source": [
-        "from google.colab import drive\n",
-        "import json\n",
-        "\n",
         "import requests\n",
         "from requests.auth import HTTPBasicAuth\n",
         "\n",
@@ -70,13 +67,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Por una cuestión de seguridad, tenemos la clave de la API guardada en el drive. \n",
+        "Por una cuestión de seguridad, tenemos la clave de la API guardada en Colab Secrets.\n",
         "\n",
         "Para obtener su API Key de Alphacast tienen que generar un usuario y acceder a https://www.alphacast.io/settings\n",
         "\n",
-        "Después pueden dejar guardada su key en el Drive, o de alguna otra manera. \n",
+        "Después pueden dejar guardada su key en Colab Secrets, el Drive, o de alguna otra manera.\n",
         "\n",
-        "Alternativamente podrían bajar el DataSet y cargarlo a mano. También es posible acceder a estos datos directamente desde [INDEC](https://www.indec.gob.ar/indec/web/Nivel4-Tema-3-9-48), pero esos datos no están estandarizados. "
+        "Alternativamente podrían bajar el DataSet y cargarlo a mano. También es posible acceder a estos datos directamente desde [INDEC](https://www.indec.gob.ar/indec/web/Nivel4-Tema-3-9-48), pero esos datos no están estandarizados."
       ],
       "metadata": {
         "id": "HxwQc4Ypxyga"
@@ -85,38 +82,15 @@
     {
       "cell_type": "code",
       "source": [
-        "drive.mount('/content/drive', force_remount=True)\n",
-        "with open(\"/content/drive/My Drive/alphacast.json\", 'r') as f:\n",
-        "    api_token= json.load(f)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-7zhUQqvWfxS",
-        "outputId": "b54cca29-fbc9-4f33-c969-0cadaf301565"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "from google.colab import userdata\n",
+        "\n",
         "# Definir user key para la API\n",
-        "user_key = api_token[\"key\"]"
+        "user_key = userdata.get('ALPHACAST')"
       ],
       "metadata": {
-        "id": "3pxEMECIWqge"
+        "id": "-7zhUQqvWfxS"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -139,7 +113,7 @@
       "metadata": {
         "id": "vEORXDt4W6xM"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -152,7 +126,7 @@
       "metadata": {
         "id": "YpoqavEtXSYS"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -178,17 +152,8 @@
       "metadata": {
         "id": "1dqljEFrae3g"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Y la graficamos. Si bien la serie se estancadesde 2011, claramente su media depende del tiempo, por lo que no podemos quedarnos tranquilos que sea estacionaria. Por otro lado se observa su comportamiento estacional ya que lo que trajimos fue la serie original y no la desestacionalizada. "
-      ],
-      "metadata": {
-        "id": "zlq4qFwOyJwl"
-      }
     },
     {
       "cell_type": "markdown",
@@ -202,8 +167,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Pregunta 1: \n",
-        "Que la serie sea estacionaria quiere decir que su media y su varianza no dependen del tiempo. ¿Es estacionaria esta serie? \n",
+        "Pregunta 1:\n",
+        "Que la serie sea estacionaria quiere decir que su media y su varianza no dependen del tiempo. ¿Es estacionaria esta serie?\n",
         "\n",
         "Ayuda: Tal vez con graficarla alcance.\n",
         "\n",
@@ -249,7 +214,7 @@
         "Pregunta 2: Las funciones de autocorrelación (FAC) y autocorrelación parcial (FAP) muestran el grado de vinculación del valor actual respecto de los valores pasados. Graficar. ¿Por qué sobresalen algunos elementos de la FAP?\n",
         "\n",
         "\n",
-        "Ayuda: \n",
+        "Ayuda:\n",
         "\n",
         "```\n",
         "from statsmodels.graphics.tsaplots import plot_acf\n",
@@ -258,7 +223,7 @@
         "plt.show()\n",
         "```\n",
         "\n",
-        "Más ayuda: \n",
+        "Más ayuda:\n",
         "\n",
         "```\n",
         "from statsmodels.graphics.tsaplots import plot_pacf\n",
@@ -290,7 +255,7 @@
         "Pregunta 3: ¿Qué pasó en 2008 y 2020?\n",
         "\n",
         "\n",
-        "Ayuda: \n",
+        "Ayuda:\n",
         "\n",
         "\n",
         "\n",
@@ -339,9 +304,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Pregunta 4: ¿Qué son las otras columnas de nuestro Data Set? \n",
+        "Pregunta 4: ¿Qué son las otras columnas de nuestro Data Set?\n",
         "\n",
-        "Ayuda: \n",
+        "Ayuda:\n",
         "\n",
         "\n",
         "\n",
@@ -358,7 +323,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Pregunta 5: ¿Tendría sentido armar un modelo que busque explicar el EMAE a partir de las otras columnas del Data Set? \n",
+        "Pregunta 5: ¿Tendría sentido armar un modelo que busque explicar el EMAE a partir de las otras columnas del Data Set?\n",
         "\n",
         "Ayuda: No."
       ],
