Se creó con Colab

--- a/SeriesdeTiempo/X13_en_Colab.ipynb
+++ b/SeriesdeTiempo/X13_en_Colab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXBxdfmnpPmYPJj8ziqBKG",
+      "authorship_tag": "ABX9TyN1SXiHKoPzNVg2BNYLfb6H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
           "height": 497
         },
         "id": "Eb3FEbMISj_B",
-        "outputId": "77f4dc22-229c-49a2-f462-4ab4f321fd7a"
+        "outputId": "d1548624-00a0-4a34-b5e4-dc08e73527a8"
       },
       "execution_count": 2,
       "outputs": [
@@ -94,6 +94,7 @@
       "cell_type": "code",
       "source": [
         "X13AS_DIR='x13asall/'\n",
+        "X13AS_TARFILE='x13as_all-v1-1-b39.tar'\n",
         "\n",
         "!mkdir -p $X13AS_DIR\n",
         "!wget -P $X13AS_DIR -c 'https://www2.census.gov/software/x-13arima-seats/x13as/unix-linux/combined-archives/x13as_all-v1-1-b39.tar'\n",
@@ -105,24 +106,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "shSr_Qk6d1_G",
-        "outputId": "e1b04537-0e45-49d0-f36a-98b4198f694f"
+        "outputId": "196732a6-373c-4be2-f019-be26b2633feb"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-09-26 16:06:48--  https://www2.census.gov/software/x-13arima-seats/x13as/unix-linux/combined-archives/x13as_all-v1-1-b39.tar\n",
-            "Resolving www2.census.gov (www2.census.gov)... 23.2.93.217, 2600:1407:3c00:d94::208c, 2600:1407:3c00:d90::208c\n",
-            "Connecting to www2.census.gov (www2.census.gov)|23.2.93.217|:443... connected.\n",
+            "--2024-10-03 17:38:20--  https://www2.census.gov/software/x-13arima-seats/x13as/unix-linux/combined-archives/x13as_all-v1-1-b39.tar\n",
+            "Resolving www2.census.gov (www2.census.gov)... 23.198.123.173, 2600:1409:9800:e86::208c, 2600:1409:9800:e8d::208c\n",
+            "Connecting to www2.census.gov (www2.census.gov)|23.198.123.173|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: unspecified [application/x-tar]\n",
             "Saving to: ‘x13asall/x13as_all-v1-1-b39.tar’\n",
             "\n",
-            "x13as_all-v1-1-b39.     [        <=>         ]   3.05M  1.92MB/s    in 1.6s    \n",
+            "x13as_all-v1-1-b39.     [     <=>            ]   3.05M  2.85MB/s    in 1.1s    \n",
             "\n",
-            "2024-09-26 16:06:49 (1.92 MB/s) - ‘x13asall/x13as_all-v1-1-b39.tar’ saved [3194371]\n",
+            "2024-10-03 17:38:22 (2.85 MB/s) - ‘x13asall/x13as_all-v1-1-b39.tar’ saved [3194371]\n",
             "\n",
             "x13as\n",
             "testairline.spc\n",
@@ -164,9 +165,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kVlEdmT_SzT6",
-        "outputId": "4998c9a1-13ad-41a5-9136-a7efec390c4d"
+        "outputId": "118ccd2f-8f12-45b0-a736-e43e6fb4d3e0"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,24 +194,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jUmGqh-2f-3y",
-        "outputId": "ff203d23-c0f2-4113-c1f0-6caa9258d8ee"
+        "outputId": "56cb9aca-10c9-46b1-a13e-ac10c263bb38"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-09-26 16:07:13--  https://raw.githubusercontent.com/LCaravaggio/AnalisisCuantitativoAvanzado/main/SeriesdeTiempo/plotting.py\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2024-10-03 17:38:34--  https://raw.githubusercontent.com/LCaravaggio/AnalisisCuantitativoAvanzado/main/SeriesdeTiempo/plotting.py\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 3315 (3.2K) [text/plain]\n",
             "Saving to: ‘plotting.py’\n",
             "\n",
             "plotting.py         100%[===================>]   3.24K  --.-KB/s    in 0s      \n",
             "\n",
-            "2024-09-26 16:07:14 (45.7 MB/s) - ‘plotting.py’ saved [3315/3315]\n",
+            "2024-10-03 17:38:35 (48.1 MB/s) - ‘plotting.py’ saved [3315/3315]\n",
             "\n"
           ]
         }
@@ -230,9 +231,9 @@
           "height": 803
         },
         "id": "jni4qi6Ne-mo",
-        "outputId": "76e6c9f2-c707-47cd-9099-7f7b99ce22ff"
+        "outputId": "94d59000-f4a2-4fcd-decc-098014075080"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -255,13 +256,13 @@
       ],
       "metadata": {
         "id": "vmoMqlqiFoVB",
-        "outputId": "9f8f6c89-34e7-4d94-9b58-c18bdb237119",
+        "outputId": "02f1de86-eb19-4abf-a149-03090db61155",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 458
         }
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
